--- a/code port/code.html
+++ b/code port/code.html
@@ -25,18 +25,18 @@
             <h2>Project: KLICKY</h2>
             <div class="case">
                 <div class="show">
-                    <img src="../code port/linklicky.gif" alt="project 1"> 
+                    <img draggable="false"src="../code port/linklicky.gif" alt="project 1"> 
                 </div>
                 <div class="show">
                     <div class="evidence">
                         <div class="linkslide"> 
-                            <a href="https://docs.google.com/presentation/d/1Zzm7Qs5_9GTFmAKwpQTvHf3G5OM4vOT1EWolWaOZswM/edit?usp=sharing" target="_blank"> <img src="../code port/link.png" class="imageFrame"></a> 
+                            <a href="https://docs.google.com/presentation/d/1Zzm7Qs5_9GTFmAKwpQTvHf3G5OM4vOT1EWolWaOZswM/edit?usp=sharing" target="_blank"> <img draggable="false"src="../code port/link.png" class="imageFrame"></a> 
                             <div id="slideText">
                                 <a href="https://docs.google.com/presentation/d/1Zzm7Qs5_9GTFmAKwpQTvHf3G5OM4vOT1EWolWaOZswM/edit?usp=sharing" target="_blank" class="text">Google Slide Presentation</a>
                             </div>
                         </div> 
                         <div class="linkgit">
-                            <a href="https://github.com/gschultz49/klicky" target="_blank"> <img src="../code port/linkgit.png" class="imageFrame"></a> 
+                            <a href="https://github.com/gschultz49/klicky" target="_blank"> <img draggable="false" src="../code port/linkgit.png" class="imageFrame"></a> 
                             <div id="codeText">
                                 <a href="https://github.com/gschultz49/klicky" target="_blank" class="text" style="color: whitesmoke;">Github Repository</a>
                             </div>
@@ -57,18 +57,18 @@
             <h2>Feel ReLeaf</h2>
             <div class="case">
                 <div class="show">
-                    <img src="../portfolio/other/Jolly.png" alt="project 2">
+                    <img draggable="false"src="../portfolio/other/Jolly.png" alt="project 2">
                 </div>
                 <div class="show">
                     <div class="evidence">
                         <div class="cgfslide">
-                            <img src="../portfolio/other/Jolly.png" class="imageFrame">
+                            <img draggable="false"src="../portfolio/other/Jolly.png" class="imageFrame">
                             <div class="slideText">
                                 <a href="https://docs.google.com/presentation/d/1hiWcLpxnhXlikmNwbDribheqNQfGNtTrIN6si_JSe48/edit?usp=sharing" class="text">Google Slide Presentation</a>
                             </div>
                         </div>
                         <div class="cgfcode">
-                            <img src="../portfolio/other/Jolly.png" class="imageFrame">
+                            <img draggable="false"src="../portfolio/other/Jolly.png" class="imageFrame">
                             <div class="codeText">
                                 <a href="https://codepen.io/Judy-Zhang-the-styleful/full/wvQQYmy" class="text">CodePen</a>
                             </div>
@@ -86,7 +86,7 @@
         </div>
         <!-- <div class="project">
             <h2>Name of Project</h2>
-            <a href="" target="_blank"> <img src="../portfolio/other/Jolly.png" alt="project 3"> </a>
+            <a href="" target="_blank"> <img draggable="false"src="../portfolio/other/Jolly.png" alt="project 3"> </a>
             <div class="explain">
                 <h4>Project Description</h4>
                 <p>3Project this and that</p>
