--- a/contact/contact.html
+++ b/contact/contact.html
@@ -63,12 +63,12 @@
             <div class="linkedInSection" id="linkedInSection">
                 <div class="linkedIn">
                     <div class="backDrop">
-                        <img src="../portfolio/other/Jolly.png" id="me" width="90px" alt="avatar">
+                        <img draggable="false" src="../assests/judyz.jpg" id="me" width="90px" alt="avatar" >
                     </div>
                     <div class="info">
                         <h2>Judy Zhang<span style="font-size:15px; color:rgba(0, 0, 0, 0.37); font-weight:2px;"> (She/Her)</span></h2>
                         <h3>Daedalus Scholar at Hunter College</h3>
-                        <h4>Brooklyn, New York, United States</h4>
+                        <h4>New York, United States</h4>
                     </div>
                 </div>
                 <div class="bio">
@@ -90,13 +90,13 @@
                         Now I'm a Daedalus Scholar at Hunter College majoring in Media Studies
                         and minoring in Computer Science.
 
-                        I look foward to working with you if I get the chance to.
+                        I look forward to working with you if I get the chance to.
                         
                         Thank you!
                         </p>
                 </div>
                 <div class="connect">
-                    <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"> <h3>Connect</h3></a>
+                    <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><h3>Connect</h3></a>
                 </div>
             </div>
             <div class="sub" id="githubSub2">
@@ -110,7 +110,7 @@
             </div>
             <div class="githubSection" id="githubSection">
                 <div class="iconBack">
-                    <img src="../portfolio/other/Jolly.png" width="90px">
+                    <img draggable="false" src="../assests/judyz.jpg" width="100px">
                 </div>
                 <div class="gitinfo">
                     <h2>Judy Zhang</h2>
@@ -120,10 +120,10 @@
                 <div class="rps">
                     <h3>Repositories</h3>
                     <div class="website">
-                        <p>JudyZhang05.github.io</p>
+                        <a href="https://github.com/JudyZhang05/JudyZhang05.github.io" target="_blank"><p>JudyZhang05.github.io</p></a>
                     </div>
                     <div class="klicky">
-                        <p>Klicky</p>
+                        <a href="https://github.com/gschultz49/klicky" target="_blank"><p>Klicky</p></a>
                     </div>
                 </div>
                 <div class="more">
