--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   
   <div class="order" id="judyzhang">
     <div class="judy">
-      <img src="./portfolio/instagram/2piece.png" alt="Judy">
+      <img draggable="false" src="./portfolio/instagram/2piece.png" alt="Judy">
     </div>
     <div class="zhang">
       <div class="greetings">
@@ -40,15 +40,15 @@
     <div class="order" id="showcase">
       <div class="clickables">
         <div class="section" id="first">
-            <a href="./portfolio/drawings.html"><img src="./portfolio/other/temp cover.png"alt="Artwork Showcase"></a>
+            <a href="./portfolio/drawings.html"><img draggable="false" src="./portfolio/other/temp cover.png"alt="Artwork Showcase"></a>
             <a href="./portfolio/drawings.html"><h2>Art</h2></a>
         </div>
         <div class="section" id="second">
-          <a href="./code port/code.html"><img src="./portfolio/other/temp cover.png" alt="Code Showcase"></a>
+          <a href="./code port/code.html"><img draggable="false" src="./portfolio/other/temp cover.png" alt="Code Showcase"></a>
           <a href="./code port/code.html"><h2>Code</h2></a>
         </div>
         <div class="section" id="third">
-          <a href="./contact/contact.html"><img src="./portfolio/other/contact.png"alt="TBD"></a>
+          <a href="./contact/contact.html"><img draggable="false" src="./portfolio/other/contact.png"alt="TBD"></a>
           <a href="./contact/contact.html"><h2>Contact</h2></a>
         </div>
       </div>
@@ -59,13 +59,13 @@
       </div> 
       <div class="socials">
         <div class="link">
-          <a href="https://github.com/JudyZhang05" target="_blank"><img src="./assests/github.png" alt="Github" width="100"></a>
+          <a href="https://github.com/JudyZhang05" target="_blank"><img draggable="false" src="./assests/github.png" alt="Github" width="100"></a>
         </div>
         <div class="link">
-          <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./assests/linkedin.png" alt="LinkedIn" width="100"></a>
+          <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img draggable="false" src="./assests/linkedin.png" alt="LinkedIn" width="100"></a>
         </div>
         <div class="link">
-          <a href="https://www.instagram.com/judy.zha/" target="_blank"><img src="./assests/instagram.png" alt="Instagram" width="100"></a>
+          <a href="https://www.instagram.com/judy.zha/" target="_blank"><img draggable="false" src="./assests/instagram.png" alt="Instagram" width="100"></a>
         </div>
       </div>
     </div> -->
