--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -30,13 +30,13 @@
       </div>
       <div class="artwork">
         <div class="piece">
-          <img src="./instagram/1piece.png" alt="1">
+          <img draggable="false" src="./instagram/1piece.png" alt="1">
         </div>
         <div class="piece">
-          <img src="./instagram/TBDpiece.png" alt="2">
+          <img draggable="false" src="./instagram/TBDpiece.png" alt="2">
         </div>
         <div class="piece">
-          <img src="./instagram/3piece.png" alt="3">
+          <img draggable="false" src="./instagram/3piece.png" alt="3">
         </div>
       </div>
     </div>
@@ -46,13 +46,13 @@
       </div>
       <div class="artwork">
         <div class="piece">
-          <img src="./freelance/newyear.png" alt="4">
+          <img draggable="false" src="./freelance/newyear.png" alt="4">
         </div>
         <div class="piece">
-          <img src="./freelance/perfectdaisy.png" alt="5">
+          <img draggable="false" src="./freelance/perfectdaisy.png" alt="5">
         </div>
         <div class="piece">
-          <img src="./freelance/dragonfruit.png" alt="6">
+          <img draggable="false" src="./freelance/dragonfruit.png" alt="6">
         </div>
       </div>
     </div>
@@ -62,13 +62,13 @@
       </div>
       <div class="artwork">
         <div class="piece">
-          <img src="./other/Gweb.png" alt="7">
+          <img draggable="false" src="./other/Gweb.png" alt="7">
         </div>
         <div class="piece">
-          <img src="./other/Jweb.png" alt="8">
+          <img draggable="false" src="./other/Jweb.png" alt="8">
         </div>
         <div class="piece">
-          <img src="./other/portfolioslides.png" alt="9">
+          <img draggable="false" src="./other/portfolioslides.png" alt="9">
         </div>
       </div>
     </div>
@@ -80,7 +80,7 @@
       <div id="closeThis">&times;</div>
       <div class="calledTop">
         <h2 id="thisCalled"></h2>
-        <img class="thisOne" id="thisOne">
+        <img draggable="false" class="thisOne" id="thisOne">
       </div>
       <div class="space"></div>
       <div id="details"></div>
