all is labled and filled with data

--- a/code port/code.html
+++ b/code port/code.html
@@ -57,18 +57,18 @@
             <h2>Feel ReLeaf</h2>
             <div class="case">
                 <div class="show">
-                    <img draggable="false"src="../portfolio/other/Jolly.png" alt="project 2">
+                    <img draggable="false" src="FeelReLeafwork.gif" alt="project 2">
                 </div>
                 <div class="show">
                     <div class="evidence">
                         <div class="cgfslide">
-                            <img draggable="false"src="../portfolio/other/Jolly.png" class="imageFrame">
+                            <img draggable="false" src="./feelreleafslide.png" class="imageFrame">
                             <div class="slideText">
-                                <a href="https://docs.google.com/presentation/d/1hiWcLpxnhXlikmNwbDribheqNQfGNtTrIN6si_JSe48/edit?usp=sharing" class="text">Google Slide Presentation</a>
+                                <a href="https://docs.google.com/presentation/d/1hiWcLpxnhXlikmNwbDribheqNQfGNtTrIN6si_JSe48/edit?usp=sharing" class="text" >Google Slide Presentation</a>
                             </div>
                         </div>
                         <div class="cgfcode">
-                            <img draggable="false"src="../portfolio/other/Jolly.png" class="imageFrame">
+                            <img draggable="false"src="./feelreleafcode.png" class="imageFrame">
                             <div class="codeText">
                                 <a href="https://codepen.io/Judy-Zhang-the-styleful/full/wvQQYmy" class="text">CodePen</a>
                             </div>
