--- a/contact/contact.html
+++ b/contact/contact.html
@@ -46,7 +46,6 @@
                             <label id="myemail">To: judyz1594@gmail.com</label>
                     </div>
                         <textarea type="text" id="message" placeholder="Let's Connect!"></textarea>
-                    <br>
                 </div>
                 <button id="sendbutton" onclick="sent()">Send</button>
                 <a href="https://mail.google.com/mail/u/0/#inbox" target="_blank"><button id="gobutton" onclick="went()">Go To Emails</button></a>
@@ -110,7 +109,7 @@
             </div>
             <div class="githubSection" id="githubSection">
                 <div class="iconBack">
-                    <img draggable="false" src="../assests/judyz.jpg" width="100px">
+                    <img draggable="false" src="../assests/zhangj.jpg" width="100px">
                 </div>
                 <div class="gitinfo">
                     <h2>Judy Zhang</h2>
