adjusted href links and implemented consistent fonts for each page

--- a/code port/code.html
+++ b/code port/code.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Judy Zhang Code Showcase</title>
     <link href="../code port/code.css" rel="stylesheet" type="text/css" />
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -32,13 +37,13 @@
                         <div class="linkslide"> 
                             <a href="https://docs.google.com/presentation/d/1Zzm7Qs5_9GTFmAKwpQTvHf3G5OM4vOT1EWolWaOZswM/edit?usp=sharing" target="_blank"> <img draggable="false"src="../code port/link.png" class="imageFrame"></a> 
                             <div id="slideText">
-                                <a href="https://docs.google.com/presentation/d/1Zzm7Qs5_9GTFmAKwpQTvHf3G5OM4vOT1EWolWaOZswM/edit?usp=sharing" target="_blank" class="text">Google Slide Presentation</a>
+                                <a href="https://docs.google.com/presentation/d/1Zzm7Qs5_9GTFmAKwpQTvHf3G5OM4vOT1EWolWaOZswM/edit?usp=sharing" target="_blank" class="text" style="text-shadow: white 1px 1px;">Google Slide Presentation</a>
                             </div>
                         </div> 
                         <div class="linkgit">
                             <a href="https://github.com/gschultz49/klicky" target="_blank"> <img draggable="false" src="../code port/linkgit.png" class="imageFrame"></a> 
                             <div id="codeText">
-                                <a href="https://github.com/gschultz49/klicky" target="_blank" class="text" style="color: whitesmoke;">Github Repository</a>
+                                <a href="https://github.com/gschultz49/klicky" target="_blank" class="text" style="color: whitesmoke; text-shadow: black 1px 1px;">Github Repository</a>
                             </div>
                         </div> 
                     </div>
@@ -54,7 +59,7 @@
             </div>
         </div>
         <div class="project">
-            <h2>Feel ReLeaf</h2>
+            <h2>Project: Feel ReLeaf</h2>
             <div class="case">
                 <div class="show">
                     <img draggable="false" src="FeelReLeafwork.gif" alt="project 2">
@@ -62,15 +67,15 @@
                 <div class="show">
                     <div class="evidence">
                         <div class="cgfslide">
-                            <img draggable="false" src="./feelreleafslide.png" class="imageFrame">
+                            <a href="https://docs.google.com/presentation/d/1hiWcLpxnhXlikmNwbDribheqNQfGNtTrIN6si_JSe48/edit?usp=sharing" target="_blank"><img draggable="false" src="./feelreleafslide.png" target="_blank" class="imageFrame"></a>
                             <div class="slideText">
-                                <a href="https://docs.google.com/presentation/d/1hiWcLpxnhXlikmNwbDribheqNQfGNtTrIN6si_JSe48/edit?usp=sharing" class="text" >Google Slide Presentation</a>
+                                <a href="https://docs.google.com/presentation/d/1hiWcLpxnhXlikmNwbDribheqNQfGNtTrIN6si_JSe48/edit?usp=sharing" target="_blank" class="text" style="color:white; text-shadow: black 1px 1px;">Google Slide Presentation</a>
                             </div>
                         </div>
                         <div class="cgfcode">
-                            <img draggable="false"src="./feelreleafcode.png" class="imageFrame">
+                            <a href="https://codepen.io/Judy-Zhang-the-styleful/full/wvQQYmy" target="_blank"><img draggable="false"src="./feelreleafcode.png" class="imageFrame"></a>
                             <div class="codeText">
-                                <a href="https://codepen.io/Judy-Zhang-the-styleful/full/wvQQYmy" class="text">CodePen</a>
+                                <a href="https://codepen.io/Judy-Zhang-the-styleful/full/wvQQYmy" class="text" style="text-shadow: white 1px 1px;">CodePen</a>
                             </div>
                         </div>
                     </div>
