--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -6,6 +6,11 @@
   <meta name="viewport" content="width=device-width">
   <title>Judy Zhang Artwork Showcase</title>
   <link href="drawings.css" rel="stylesheet" type="text/css" />
+
+  <!-- fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap" rel="stylesheet">
 </head>
   
 <body>
