more small changes

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <div class="order" id="judyzhang">
     <div class="judy">
       <img draggable="false" src="./portfolio/instagram/2piece.png" alt="Judy">
+      <!-- <img draggable="false" src="./assests/judZ.jpg" alt="Judy"> -->
     </div>
     <div class="zhang">
       <div class="greetings">
@@ -33,7 +34,7 @@
         </div>
           <h2 id="c">PORTFOLIO!</h2>
         </div>
-        <h3>My name is Judy Zhang, I am an artist and aspiring UI/UX designer!</h3>
+        <h3>My name is Judy Zhang, I am an artist and aspiring web dev/designer!</h3>
       </div>
     </div>
   </div>
@@ -44,7 +45,7 @@
             <a href="./portfolio/drawings.html"><h2>Art</h2></a>
         </div>
         <div class="section" id="second">
-          <a href="./code port/code.html"><img draggable="false" src="./portfolio/other/temp cover.png" alt="Code Showcase"></a>
+          <a href="./code port/code.html"><img draggable="false" src="./portfolio/other/code.png" alt="Code Showcase"></a>
           <a href="./code port/code.html"><h2>Code</h2></a>
         </div>
         <div class="section" id="third">
