added more content in code portfolio

--- a/code port/code.html
+++ b/code port/code.html
@@ -85,18 +85,40 @@
                 <h4>Project Description</h4>
                 <p>The Feel ReLeaf Project is a mental health awareness website where one is given the opportunity to relieve their deepest darkest secret anonymously or sign up to recieve professional help. This project seconds as 
                     my Code First Girls Javascript Kickstarter Course graduating project. The website includes a language translation option to be inclusive to people on a global scale. Additionally, the website switches between a typing section and
-                reading section. The website's design is developed to emulate an open space/enviorment where you're able to as the title states `Feel Releaf (Relief)`. On the last day of the course, I presented the website in its final stage of development with working buttons
+                reading section. The website's design is developed to emulate an open space/environment where you're able to as the title states `Feel Releaf (Relief)`. On the last day of the course, I presented the website in its final stage of development with working buttons
                 and transitional functions. I concluded the presentation with a demo and graduated from the course with a Completion of the Introduction to Javascript certificate which could be found on my LinkedIn.</p>
             </div>
         </div>
-        <!-- <div class="project">
-            <h2>Name of Project</h2>
-            <a href="" target="_blank"> <img draggable="false"src="../portfolio/other/Jolly.png" alt="project 3"> </a>
+        <div class="project">
+            <h2>Project: MEDP Website</h2>
+            <div class="case">
+                <div class="show">
+                    <img draggable="false" src="./gtshow.gif" alt="project 3">
+                </div>
+                <div class="show">
+                    <div class="gtview">
+                        <a href="https://judy-zhang-medp-website.glitch.me" target="_blank"> <img draggable="false" src="./gtview.png" class="imageFrame"> </a>
+                        <div class="slideText">
+                            <a href="https://judy-zhang-medp-website.glitch.me" target="_blank" class="text" style="color:black; text-shadow: white 1px 1px;"> Glitch Website </a>
+                        </div>
+                    </div>
+                    <div class="gtcode">
+                        <a href="https://glitch.com/edit/#!/judy-zhang-medp-website?path=index.html%3A1%3A0" target="_blank"> <img draggable="false" src="./gtlink.png" class="imageFrame"> </a>
+                        <div class="codeText">
+                            <a href="https://glitch.com/edit/#!/judy-zhang-medp-website?path=index.html%3A1%3A0" target="_blank" class="text" style="color:black; text-shadow: white 1px 1px;"> Glitch Code </a>
+                        </div>
+                    </div>
+                    
+                </div>
+
+            </div>
             <div class="explain">
                 <h4>Project Description</h4>
-                <p>3Project this and that</p>
+                <p>This website was developed throughout Hunter College's MEDP 150 course utilizing the online integrated development environment called 'GLITCH'. This website encapsulates my practice in photography, adobe products such as Photoshop and Illustrator, animations and gifs, and storytelling at a fundamental level. Additionally,
+                    this is a website that encompasses reflections of course readings and peer websites. The primary focus of this website was to practice web development while developing media-correlated skill sets. Thus, the labs included limited information on the
+                    pieces presented. Feel free to visit and play my final project-Interactive Story found in lab 10. </p>
             </div>
-        </div> -->
+        </div>
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
