added credit and link to sista

--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
             <div class="imageZoom"></div>
         </div>
     </div>
+    <div class="break">
+        <div id="blank"></div>
+        <small>photo taken by my lovely sister <a href="https://joycezhang.netlify.app/#_portfolioSection" target="_blank">Joyce</a> <3</small>
+    </div>
     <div class="social">
         <h1 id="followUp"></h1>
         <div class="follow">
