added personal svg icons

--- a/02_projects/index.html
+++ b/02_projects/index.html
@@ -18,14 +18,14 @@
         <div class="web">          
             <a href="../index.html">About</a>
             <a href="#" id="active">Projects</a>
-            <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank">Resume</a>
+            <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="../index.html"><li>About</li></a>
                 <a href="#" id="mobActive"><li>Projects</li></a>
-                <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank"><li>Resume</li></a>
+                <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
     </nav>        
@@ -97,7 +97,7 @@
                 </div>
             </div>
 
-            <div class="project">
+            <!-- <div class="project">
                 <div class="projectPreview">
                     <img draggable="false" src="../00_assets/projects/code/webprod.png" alt="MEDP285 Project">
                 </div>
@@ -113,7 +113,7 @@
                         <a class="pjbottom" href="https://www.figma.com/design/LA4v57EIlJcTeaXRIAcz1E/Judy-Zhang---MEDP285-Wireframe?node-id=1669-162202&t=iCde2uxOHoiJuFDs-0" target="_blank">Figma</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="project">
                 <div class="projectPreview">
@@ -158,7 +158,7 @@
                     <div class="projectDescription">
                         <b>STEPHEN KING VILLAIN API</b><small> (2024)</small>
                         <p>This website was the final project developed for Hunter College's CSCI 39548 - Web Development course. Ever wondered which Stephen King villain you were? Well, wonder no more. Enter your name and year of birth to see which one of Stephen King's natorious villain lurks within you!
-                            The SKV webiste utilizes node.js, express, body-parser (as the middleware), axios, and embedded javascript to function. Through it's client-server architectural programming allows user to recieve a computated response from the fetched RESTful Stephen King API found <a href="https://stephen-king-api.onrender.com" target="_blank" id="elink">here</a>.  
+                            The SKV website utilizes node.js, express, body-parser (as the middleware), axios, and embedded javascript to function. Through it's client-server architectural programming, it allows users to recieve a computated response from the fetched RESTful Stephen King API found <a href="https://stephen-king-api.onrender.com" target="_blank" id="elink">here</a>.  
                         </p>
                     </div>
                     <div class="projectLinks">
@@ -191,7 +191,7 @@
                 </div>
             </div>
 
-            <div class="project">
+            <!-- <div class="project">
                 <div class="projectPreview">
                     <img draggable="false" src="../00_assets/projects/design/other/Jweb.png" alt="Jolly Design">
                 </div>
@@ -206,7 +206,7 @@
                         <p>The 'Jolly' design was created for a potential family start-up company temporarily named 'Jolly'. The layout has yet to be finalized, however, it incorporates a homepage, game selection, game demo page, shop site, and socials page. The color palette applies a warm pastel hue to the website bringing forth a cozy and comfortable visualization to the audience. This color scheme is designed with smooth transitions between each section. These aspects give the illusion of a more modern yet intriguing aura. Additionally, animated backgrounds and images are implemented within the format for a more active interaction for the viewers.</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <div class="project">
                 <div class="projectPreview">
