--- a/03_design/index.html
+++ b/03_design/index.html
@@ -21,7 +21,7 @@
       <a class="skip"></a>
       <a href="../index.html">About</a>
       <a href="../02_projects/index.html">Projects</a>
-      <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank">Resume</a>
+      <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank">Resumé</a>
     </div>
   </div>
 
