--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Judy Zhang About</title>
+    <title>Judy Zhang</title>
     <link href="./01_about/style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" type="image/x-icon" href="./00_assets/svgs/meIcon.svg">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -14,18 +15,19 @@
 <body>
 
     <nav>
-        <p id="me_index">Judy Zhang</p>
+        <img src="./00_assets/svgs/meMe.svg" width="100px">
+        <!-- <p id="me_index">Judy Zhang</p> -->
         <div class="web">            
             <a href="#" id="active">About</a>
             <a href="../02_projects/index.html" >Projects</a>
-            <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank">Resume</a>
+            <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank">Resumé</a>
         </div>
         <div class="mob">
             <div id="mobIcon"><img src="../00_assets/svgs/hmg.svg" width="60vh" height="60vh"></div>
             <ul class="mobNav">
                 <a href="#" id="mobActive"><li>About</li></a>
                 <a href="../02_projects/index.html"><li >Projects</li></a>
-                <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank"><li>Resume</li></a>
+                <a href="../00_assets/me/Judy Zhang Resume.pdf" target="_blank"><li>Resumé</li></a>
             </ul>
         </div>
     </nav>        
@@ -39,7 +41,7 @@
                 <p> What's up!
                     Currently, I am a Hunter College Undergraduate majoring in Emerging Media and minoring in Computer Science. 
                     I've got a burning passion for UI/UX Design and Front-end Web Development with an unquenchable thrist for knowledge. 
-                    Majoring in fine arts all throughout my persuit for higher education, I continue to incorporate my skills and creativity to further my technical designs. 
+                    Being a fine art artist and enthusiasts of sorts, I strive to incorporate my expertise and creativity to further my designs in intuitive and user-friendly/accessible ways. 
                     Got an interesting project to work on? Sign me up. now. Expand your horizons with me and aim for the stars!
                 </p>    
             </div>
