Reconstructed Projects Page

--- a/03_design/index.html
+++ b/03_design/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Judy Zhang Designs</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link rel="icon" type="image/x-icon" href="../00_assets/svgs/meIcon.svg">
 
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -126,8 +127,7 @@
 
 
   <hr/>
-  <footer>All Rights Reserved &copy; Judy Zhang <small>(judyz1594@gmail.com)</small> </footer>
-
+  <footer>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Judy Zhang. All rights reserved. <small>(judyz1594@gmail.com)</small> </footer>
   
   <script src="script.js"></script>
 
