--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
 
     <nav>
-        <img src="./00_assets/svgs/meMe.svg" width="100px">
-        <!-- <p id="me_index">Judy Zhang</p> -->
+        <img draggable="false" src="./00_assets/svgs/meMe.svg" id="me_index" width="100px">
+        <!-- <p  id="me_index">Judy Zhang</p> -->
         <div class="web">            
             <a href="#" id="active">About</a>
             <a href="../02_projects/index.html" >Projects</a>
@@ -41,7 +41,7 @@
                 <p> What's up!
                     Currently, I am a Hunter College Undergraduate majoring in Emerging Media and minoring in Computer Science. 
                     I've got a burning passion for UI/UX Design and Front-end Web Development with an unquenchable thrist for knowledge. 
-                    Being a fine art artist and enthusiasts of sorts, I strive to incorporate my expertise and creativity to further my designs in intuitive and user-friendly/accessible ways. 
+                    Being a fine art artist and enthusiasts of sorts, I strive on incorporating my expertise and creativity to further my designs in intuitive user-friendly and accessible ways. 
                     Got an interesting project to work on? Sign me up. now. Expand your horizons with me and aim for the stars!
                 </p>    
             </div>
@@ -61,7 +61,7 @@
             <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./00_assets/svgs/lk.svg" id="up2"></a>
             <a href="https://github.com/JudyZhang05" target="_blank"><img src="./00_assets/svgs/gh.svg" id="up3"></a>
         </div>
-        <footer>All Rights Reserved &copy; Judy Zhang <small>(judyz1594@gmail.com)</small> </footer>
+        <footer>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Judy Zhang. All rights reserved. <small>(judyz1594@gmail.com)</small> </footer>
     </div>
     <script src="./01_about/script.js"></script>
 </body>
