project details page under progress, need to figure out javascript and add the respective data

--- a/03_design/index.html
+++ b/03_design/index.html
@@ -127,7 +127,7 @@
 
 
   <hr/>
-  <footer>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Judy Zhang. All rights reserved. <small>(judyz1594@gmail.com)</small> </footer>
+  <footer>Copyright &copy; 2024 Judy Zhang. All rights reserved. <small>(judyz1594@gmail.com)</small> </footer>
   
   <script src="script.js"></script>
 
