--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./00_assets/svgs/lk.svg" id="up2"></a>
             <a href="https://github.com/JudyZhang05" target="_blank"><img src="./00_assets/svgs/gh.svg" id="up3"></a>
         </div>
-        <footer>Copyright &copy; <script>document.write(new Date().getFullYear())</script> Judy Zhang. All rights reserved. <small>(judyz1594@gmail.com)</small> </footer>
+        <footer>Copyright &copy; 2024 Judy Zhang. All rights reserved. <small>(judyz1594@gmail.com)</small> </footer>
     </div>
     <script src="./01_about/script.js"></script>
 </body>
