--- a/02_projects/02_projectDetails/index.html
+++ b/02_projects/02_projectDetails/index.html
@@ -61,25 +61,27 @@
             <h1>The Design Process</h1>
             <p id="design">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
-
-        <a href="" id="visitSite"><div class="imageWrap">
-            <img draggable="false" src="../../00_assets/projects/design/other/temp cover.png" id="projectFigma">
-            <p class="viewImage"><span class="coverText">Visit Figma</span><span class="coverSymb">&#10148;</span></p>
+  
+        <a href="" target="_blank" id="visitfigma" title="Visit Figma"><div class="imageWrap">
+            <img draggable="false" src="../../00_assets/projects/design/other/temp cover.png" class="projectView" id="figma">
+            <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
         </div></a>
 
         <section class="dSect" id="developSection">
             <h1>The Development Process</h1>
-            <p id="design">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p id="develop">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
 
-        <a href="" id="visitSite"><div class="imageWrap">
-            <img draggable="false" src="../../00_assets/projects/design/other/temp cover.png" id="projectFinal">
-            <p class="viewImage"><span class="coverText">Visit Website</span><span class="coverSymb">&#10148;</span></p>
+        <a href="" target="_blank" id="visitwebsite" title="Visit Website"><div class="imageWrap">
+            <img draggable="false" src="../../00_assets/projects/design/other/temp cover.png" class="projectView" id="website">
+            <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
         </div></a>
 
     </div>
     <section id="nextProject">
-        <button>See Next &#8640;</button>
+        <!-- <a href=""> -->
+            <button id="nextCase">See Next &#8640;</button>
+        <!-- </a> -->
     </section>
     <footer>Copyright &copy; 2024 Judy Zhang. All rights reserved. <small>(judyz1594@gmail.com)</small> </footer>
     <script src="./script.js"></script>
