implemented more design into project details

--- a/02_projects/02_projectDetails/index.html
+++ b/02_projects/02_projectDetails/index.html
@@ -51,11 +51,11 @@
         </section>
         
         
-        <div class="progressBar">
+        <!-- <div class="progressBar">
             <a  id="pb1" href="#designSection">Design</a>
             <hr/>
             <a  id="pb2" href="#developSection">Development</a>
-        </div>
+        </div> -->
 
         <section class="dSect" id="designSection">
             <h1>The Design Process</h1>
