--- a/02_projects/02_projectDetails/index.html
+++ b/02_projects/02_projectDetails/index.html
@@ -39,12 +39,12 @@
     <div class="container">
         <section class="projectPurpose">
             <section class="problemSection">
-                <h1>The Problem</h1>
+                <h1 class="story">The Problem</h1>
                 <p id="problem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </section>
             <section class="solutionSection">
-                <h1>The Solution</h1>
+                <h1 class="story">The Solution</h1>
                 <p id="solution">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                 </p>
             </section>
@@ -63,7 +63,7 @@
         </section>
   
         <a href="" target="_blank" id="visitfigma" title="Visit Figma"><div class="imageWrap">
-            <img draggable="false" src="../../00_assets/projects/design/other/temp cover.png" class="projectView" id="figma">
+            <img draggable="false" src="../../00_assets/projects/design/art/other/temp cover.png" class="projectView" id="figma">
             <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
         </div></a>
 
@@ -73,7 +73,7 @@
         </section>
 
         <a href="" target="_blank" id="visitwebsite" title="Visit Website"><div class="imageWrap">
-            <img draggable="false" src="../../00_assets/projects/design/other/temp cover.png" class="projectView" id="website">
+            <img draggable="false" src="../../00_assets/projects/design/art/other/temp cover.png" class="projectView" id="website">
             <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
         </div></a>
 
