Implemented previous button

--- a/02_projects/02_projectDetails/index.html
+++ b/02_projects/02_projectDetails/index.html
@@ -50,7 +50,6 @@
             </section>
         </section>
         
-        
         <!-- <div class="progressBar">
             <a  id="pb1" href="#designSection">Design</a>
             <hr/>
@@ -79,9 +78,8 @@
 
     </div>
     <section id="nextProject">
-        <!-- <a href=""> -->
             <button id="nextCase">See Next &#8640;</button>
-        <!-- </a> -->
+            <button id="prevCase">See Previous &#8636;</button>
     </section>
     <footer>Copyright &copy; 2024 Judy Zhang. All rights reserved. <small>(judyz1594@gmail.com)</small> </footer>
     <script src="./script.js"></script>
