--- a/02_projects/02_projectDetails/index.html
+++ b/02_projects/02_projectDetails/index.html
@@ -61,9 +61,9 @@
             <p id="design">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
   
-        <a href="" target="_blank" id="visitfigma" title="Visit Figma"><div class="imageWrap">
+        <a href="" target="_blank" id="visitfigma" title="Visit Figma"><div class="imageWrap" >
             <img draggable="false" src="../../00_assets/projects/design/art/other/temp cover.png" class="projectView" id="figma">
-            <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
+            <p class="viewImage" id="figmaArrow"><span class="coverSymb">&#10148;</span></p>
         </div></a>
 
         <section class="dSect" id="developSection">
@@ -71,9 +71,9 @@
             <p id="develop">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </section>
 
-        <a href="" target="_blank" id="visitwebsite" title="Visit Website"><div class="imageWrap">
+        <a href="" target="_blank" id="visitwebsite" title="Visit Website"><div class="imageWrap" >
             <img draggable="false" src="../../00_assets/projects/design/art/other/temp cover.png" class="projectView" id="website">
-            <p class="viewImage"><span class="coverSymb">&#10148;</span></p>
+            <p class="viewImage" id="websiteArrow"><span class="coverSymb">&#10148;</span></p>
         </div></a>
 
     </div>
