Completed the implmentation of data information, portfolio website figma still required

--- a/02_projects/02_projectDetails/index.html
+++ b/02_projects/02_projectDetails/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" type="image/x-icon" href="../../00_assets/svgs/meIcon.svg">
     <link rel="stylesheet" href="./style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 
